--- a/ROOPLPPC.cabal
+++ b/ROOPLPPC.cabal
@@ -24,5 +24,6 @@ executable ROOPLPPC
                       , bytestring
                       , containers
                       , pretty-show
+                      , pretty-simple
   hs-source-dirs:       src
   default-language:     Haskell2010
