--- a/ROOPLPPC.cabal
+++ b/ROOPLPPC.cabal
@@ -2,15 +2,15 @@ name:                 ROOPLPPC
 version:              0.1.0.0
 synopsis:             ROOPL++ to PISA Compiler
 -- description:
--- license:
--- license-file:
-homepage:             TBD
+license:              MIT
+license-file:         LICENSE
+homepage:             https://github.com/cservenka/ROOPLPPC
 author:               Martin Holm Cservenka
 maintainer:           mhcservenka@gmail.com
 category:             Language
 -- copyright:
 build-type:           Simple
--- extra-source-files:
+extra-source-files:   README.md
 cabal-version:        >=1.10
 
 executable ROOPLPPC
