--- a/ROOPLPPC.cabal
+++ b/ROOPLPPC.cabal
@@ -32,5 +32,6 @@ executable ROOPLPPC
                       , containers
                       , pretty-show
                       , pretty-simple
+                      , split
   hs-source-dirs:       src
   default-language:     Haskell2010
